--- a/src/styles/main-headerone.less
+++ b/src/styles/main-headerone.less
@@ -48,7 +48,7 @@ body {
                 .check-menu-label {
                     display: none;
                 } 
-                .burger_line {////////////////////?????????????????
+                .burger_line {
                     display: none;
                 }
                 .main-menu {
@@ -61,8 +61,6 @@ body {
                     display: flex;
                     justify-content: space-between;
                     .mobile-menu-li {
-                        // padding-left: 14px;
-                        // padding-right: 14px;
                         .mobile-menu-a{
                             color: #FFFFFF;
                             font-size: 14px;
@@ -70,7 +68,6 @@ body {
                             font-family: 'K2D', sans-serif;
                             font-weight: 400;
                             padding: 10px 13px 10px 13px;
-                            // background: rgb(53, 51, 51); /////////////
                 
                             /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
                             background: rgb(181,189,200); /* Old browsers */
@@ -85,7 +82,6 @@ body {
                             font-weight: 400;
                             color: rgb(7, 253, 220);
                             border-bottom: rgb(7, 253, 220) solid 2px;
-                            // padding-bottom: 3px;
                         }
                     }
             
@@ -125,7 +121,6 @@ body {
                     font-family: 'K2D', sans-serif;
                     color: #ffffff;
                     font-size: 0px;
-                    // padding: 6px; 
                 }
                 label {
                     width: 33px;
@@ -138,8 +133,6 @@ body {
                     border-radius: 3px;
                     color: #ffffff; ////
                     border: 1px solid #ffffff; /////
-                    // margin-left: 8px;
-                    // margin-top: 3px;
                     display: inline-block;
                     text-align: center;
                     padding: 0; 
@@ -167,7 +160,6 @@ body {
                     margin-top: -4px;
                     .shopping-backet {
                         color: #ffffff;
-                        // text-transform: uppercase;
                         text-decoration: none;
                         font-family: 'K2D', sans-serif;
                         font-size: 14px;
