--- a/src/styles/main-media-headerone.less
+++ b/src/styles/main-media-headerone.less
@@ -262,7 +262,7 @@
           .cart-block {
             .shopping-backet {
               .text_basket {
-                display: none; /////////////
+                display: none; ////
               }
             } 
           }
