--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -11,11 +11,19 @@
 @import url('main-header-breadcrumbs.less');
 @import url('main-headerthree.less');
 
+@import url('main-content-block.less');
+
+@import url('main-footer.less');
+
+
+
+
+
+
 
 
 
 // @import url('main-media.less');
-
 @import url('main-media-headerone.less');
 @import url('main-media-headertwo.less');
 @import url('main-media-headerthree.less');
