--- a/src/styles/main-headertwo.less
+++ b/src/styles/main-headertwo.less
@@ -15,17 +15,17 @@ body {
         margin: 0;
         display: flex;
         flex-direction: column;
-        min-height: 230px;
+        min-height: 275px;
         width: 100%;
         max-width: 1260px;
         justify-content: space-around;
-        background: rgb(255, 0, 119);
+        // background: rgb(255, 0, 119);
         .headerTwo {
             padding: 0;
             margin: 0;
             display: flex;
             flex-direction: column;
-            height: 260px;
+            height: 275px;
             width: 100%;
             max-width: 1260px;
             align-items: center;
@@ -106,10 +106,17 @@ body {
                             // color: rgb(70, 70, 70);
                             // text-shadow: 1px 1px 2px white, -1px -1px 2px white, 1px -1px 2px white, -1px 1px 2px white;
     
-                            color: rgb(161, 106, 3);
-                            text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
+                            // color: rgb(161, 106, 3);
+                            // text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
+                            color: rgb(160, 100, 0);
+                            // text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
+                            text-shadow: 1px 1px 1px white, -1px -1px 1px white, 1px -1px 1px white, -1px 1px 1px white;
                             text-decoration: none;
                             padding: 10px;
+                            }
+                            a:hover {
+                                
+                                color: rgb(216, 142, 5);
                             }    
                         }
                         .email {
@@ -125,11 +132,18 @@ body {
                                 // color: rgb(255, 176, 5);
                                 // text-shadow: 1px 1px 0 #000000, -1px -1px 0 #000000,1px -1px 0 #000000, -1px 1px 0 #000000;
     
-                                color: rgb(161, 106, 3);
-                                text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
+                                color: rgb(160, 100, 0);;
+                                
+                                // text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
+                                text-shadow: 1px 1px 1px white, -1px -1px 1px white, 1px -1px 1px white, -1px 1px 1px white;
                                 text-decoration: none;
                                 padding: 10px;
+                                
                             } 
+                            a:hover {
+                                
+                                color: rgb(216, 142, 5);
+                            }
                         }
                     }
                 }
@@ -143,9 +157,10 @@ body {
                         text-decoration: none;
                         .title {
                             font-family: 'K2D', sans-serif;
-                            color: #FFFFFF;
+                            color: rgb(160, 100, 0);
                             letter-spacing: 1px;
                             // background: #33cc66;
+                            width: 270px;
                             .logoTitleText_h1 {
                                 // background-image: url("https://media0.giphy.com/media/eprnXWC1PLbrO/200w.webp?cid=ecf05e4766a07a8efbf760d33916daa3d2969cda69e31bac&rid=200w.webp");
                                 // // background-size: cover;
@@ -153,35 +168,45 @@ body {
                                 // -moz-background-clip: text;
                                 // -webkit-background-clip: text;
                                 text-transform: uppercase;
-                                font-size: 70px;
+                                font-size: 80px;
                                 line-height: 0.75;
                                 padding:  5px;
                                 margin: 10px 0;
                                 font-weight: 800;
-                                color: rgb(216, 142, 5);
-                                text-shadow: 2px 1px 0 #070707, -2px -1px 0 #080808, 2px -1px 0 #070707, -2px 1px 0 #070707;
-                                text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
+                                
+                                
+                                text-shadow: 1px 1px 1px white, -1px -1px 1px white, 1px -1px 1px white, -1px 1px 1px white;
+                                // text-shadow: 2px 1px 0 #070707, -2px -1px 0 #080808, 2px -1px 0 #070707, -2px 1px 0 #070707;
+                                // text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
                             }
+                            // .logoTitleText_h1:hover {
+                            //     color: rgb(187, 122, 1);
+                            // }
                             .logoTitleText_h6 {
                                 text-transform: uppercase;
-                                font-size: 20px;
-                                line-height: 0.75;
-                                padding: 5px;
+                                font-size: 18px;
+                                letter-spacing: 2px;
+                                line-height: 0.5;
+                                padding: 2px;
                                 margin: 10px 0;
-                                font-weight: 600;
+                                font-weight: 1000;
                                 // color: rgb(253, 27, 27);
                                 // text-shadow: 1px 1px 0 #ffffff, -1px -1px 0 #ffffff,1px -1px 0 #ffffff, -1px 1px 0 #ffffff;
                                 // color: rgb(255, 255, 255);
                                 // text-shadow: 1px 1px 0 rgb(207, 142, 2), -1px -1px 0 rgb(207, 145, 12),1px -1px 0 rgb(255, 176, 5), -1px 1px 0 rgb(255, 176, 5);
                                 // color: rgb(255, 176, 5);
                                 // text-shadow: 1px 1px 0 black, -1px -1px 0 black, 1px -1px 0 black, -1px 1px 0 black;
-                                color: rgb(161, 106, 3);
-                                text-shadow: 1px 1px 5px white, -1px -1px 5px white, 1px -1px 5px white, -1px 1px 5px white;
+                                
+                                text-shadow: 1px 1px 1px white, -1px -1px 1px white, 1px -1px 1px white, -1px 1px 1px white;
                                 // text-shadow: 1px 1px 0px white, -1px -1px 0px white, 1px -1px 0px white, -1px 1px 0px white;
-                  
-                 
                             }
+                           
                         }
+                        .title:hover {
+                            
+                            color: rgb(216, 142, 5);
+                        }
+                        
                     }
                 }
     
@@ -241,6 +266,7 @@ body {
                         display: table;
                     }
                 }
+                
             }
         }
     }
