--- a/src/styles/main-content-block.less
+++ b/src/styles/main-content-block.less
@@ -11,11 +11,12 @@ body {
         margin: 0;
         display: flex;
         flex-direction: column;
-        min-height: 230px;
+        min-height: 830px;
         width: 100%;
         max-width: 1260px;
         justify-content: space-around;
-        background: rgba(0, 204, 255, 0.705);
+        z-index: 11111;
+        // background: rgba(0, 204, 255, 0.705);
         // .xxxxxx {
         //     padding: 0;
         //     margin: 0;
