--- a/src/styles/main-footer.less
+++ b/src/styles/main-footer.less
@@ -21,6 +21,7 @@ body {
         background: #222;
         font-family: 'K2D', sans-serif;
         color: #aaa;
+        z-index: 11111;
         .container {
             width: 100%;
             display: flex;
@@ -48,7 +49,7 @@ body {
 
             }
             .box p {
-                font-size: 12px;
+                font-size: 13px;
                 padding-bottom: 10px;
             }
             .box a {
