--- a/src/styles/main-header-breadcrumbs.less
+++ b/src/styles/main-header-breadcrumbs.less
@@ -17,22 +17,19 @@ body {
         width: 100%;
         max-width: 1260px;
         justify-content: space-around;
-        background: rgb(255, 0, 119);
+        // background: rgb(255, 0, 119);
         .header-bread-crumbs {
             display: flex;
             align-items: center;
             min-height: 25px;
             // width: 100%;
             max-width: 1260px;
-            /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
-            background: rgb(181,189,200); /* Old browsers */
-            background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-                  
-            border-top: 2px solid rgb(121, 121, 121);
-            border-bottom: 2px solid rgb(121, 121, 121);
+           
+            // background: rgb(136, 136, 136);
+            background: #222;
+            opacity: 0.5;
+            // border-top: 2px solid rgb(109, 109, 109);
+            // border-bottom: 2px solid rgb(109, 109, 109);
             padding-left: 15px; //
             padding-right: 15px; //
             padding-top: 5px;
@@ -42,6 +39,7 @@ body {
                 font-weight: 200;
                 font-size: 13px;
                 color: rgb(255, 255, 255);
+               
                 text-transform: uppercase;
             }
         }
