--- a/src/styles/main-headerone.less
+++ b/src/styles/main-headerone.less
@@ -18,7 +18,7 @@ body {
         width: 100%;
         max-width: 1260px;
         justify-content: space-around;
-        background: rgb(255, 0, 119);
+        // background: rgb(255, 0, 119);
         .headerOne {
             display: flex;
             justify-content: space-around;
@@ -34,6 +34,9 @@ body {
             background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
             // background: rgb(211, 65, 65);
+
+            background: rgb(136, 136, 136);
+            background: #444;
             padding-left: 15px; //
             padding-right: 15px; //
             .wrapper {
@@ -66,8 +69,9 @@ body {
                             font-size: 14px;
                             text-decoration: none;
                             font-family: 'K2D', sans-serif;
-                            font-weight: 400;
-                            padding: 10px 13px 10px 13px;
+                            // font-weight: 400;
+                            font-weight: 500;
+                            padding: 11px 13px 11px 13px;
                 
                             /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
                             background: rgb(181,189,200); /* Old browsers */
@@ -76,12 +80,28 @@ body {
                             background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
                             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
                             // background: rgb(255, 176, 5);
+                            background: rgb(136, 136, 136);
+                            background: #444;
                         }
                         .mobile-menu-a:hover {
                             font-family: 'K2D', sans-serif;
-                            font-weight: 400;
-                            color: rgb(7, 253, 220);
-                            border-bottom: rgb(7, 253, 220) solid 2px;
+                            font-weight: 500;
+                            // color: rgb(7, 253, 220);
+                            // padding-bottom: 8px;
+                            // border-bottom: crimson solid 3px;
+                            // color: #2e2c2c;
+                            transition: 0.3s linear;
+                            color: #2e2c2c;
+                            background: rgb(255,255,255); /* Old browsers */
+                            background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6-15 */
+                            background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10-25,Safari5.1-6 */
+                            background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+                            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
+                            
+
+                            background: rgb(216, 142, 5);
+                            transition: 0.2s linear;
+                            
                         }
                     }
             
@@ -95,6 +115,8 @@ body {
                 background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
                 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
                 // background: yellowgreen; //////////
+                background: rgb(136, 136, 136);
+                background: #444;
                 width: 130px;
                 height: 39px;
                 display: flex;
@@ -126,7 +148,7 @@ body {
                     width: 33px;
                     height: 22px;
                     font-size: 14px;
-                    font-weight: 200;
+                    font-weight: 500;
                     font-family: 'K2D', sans-serif;
                     line-height: 19px;
                     cursor: pointer;
@@ -138,8 +160,15 @@ body {
                     padding: 0; 
                 }
                 label:hover {
-                    color: rgb(255, 176, 5); ////
-                    border: 1px solid rgb(255, 176, 5); /////
+                    // color: rgb(255, 176, 5); ////
+                    // border: 1px solid rgb(255, 176, 5); /////
+                    // color: crimson; ////
+                    // border: 1px solid crimson; /////
+                    // background: #ffffff;
+                    color: rgb(216, 142, 5); ////
+                    border: 1px solid rgb(216, 142, 5); /////
+                    // background: #ffffff;
+                    transition: 0.4s linear;
                 }
             }
             .cart-block {
@@ -151,6 +180,8 @@ body {
                 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
         
                 // background: yellowgreen; ///////////
+                background: rgb(136, 136, 136);
+                background: #444;
                 height: 39px;
                 display: flex;
                 align-items: center;
@@ -163,7 +194,7 @@ body {
                         text-decoration: none;
                         font-family: 'K2D', sans-serif;
                         font-size: 14px;
-                        font-weight: 200;
+                        font-weight: 500;
                         text-transform: uppercase;
                         display: flex;
                         .img_basket {
@@ -179,16 +210,31 @@ body {
                             margin-left: 5px; 
                         }
                     }
+                    // .shopping-backet:hover .text_basket {
+                    //     cursor: pointer;
+                    //     color: rgb(255, 176, 5);
+                    // }
+                    // .shopping-backet:hover .img_basket {
+                    //     cursor: pointer;
+                    //     background: rgb(255, 176, 5);
+                    //     border: 2px solid rgb(78, 77, 77);
+                    //     border-radius: 50%;
+                    //     padding: 0;
+                    // }
                     .shopping-backet:hover .text_basket {
                         cursor: pointer;
-                        color: rgb(255, 176, 5);
+                        color: rgb(216, 142, 5);
+                        
+                       
                     }
                     .shopping-backet:hover .img_basket {
                         cursor: pointer;
-                        background: rgb(255, 176, 5);
-                        border: 2px solid rgb(78, 77, 77);
+                        background: rgb(216, 142, 5);
+                        // border: 2px solid rgb(78, 77, 77);
+                        border: 1px solid #ffffff;
                         border-radius: 50%;
                         padding: 0;
+                        transition: 0.2s linear;
                     }
                 }
             }
