--- a/src/styles/main-headerthree.less
+++ b/src/styles/main-headerthree.less
@@ -17,20 +17,15 @@ body {
         width: 100%;
         max-width: 1260px;
         justify-content: space-around;
-        background: rgb(255, 0, 119);
+        // background: rgb(255, 0, 119);
         .headerThree-menu {
             font-family: 'K2D', sans-serif;
             font-weight: 400;
             height: 36px;
             max-width: 1260px;
             // background: rgb(211, 65, 65);
-            /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
-            background: rgb(181,189,200); /* Old browsers */
-            background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-         
+            background: #444;
+            z-index: 44444;
             .dws-menu * {
                 margin: 0;
                 padding: 0;  
@@ -45,21 +40,15 @@ body {
             }
             .dws-menu > ul  li a {
                 display: block;
-                background: rgb(181,189,200); /* Old browsers */
-                background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
-                background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-    
-          
+                background: #444;
                 padding: 9px 30px 9px 40px;
                 height: 36px;//////////////////// //////////////  ///////////////////
-          
                 font-size: 14px;
                 color: #fff;
                 text-decoration: none;
                 text-transform: uppercase;
                 transition: all 0.5s ease;
+                
             }
             .dws-menu > ul  li {
                 position: relative;
@@ -72,44 +61,45 @@ body {
             }
             .dws-menu > ul li:first-child {
                 border-left: 1px solid #b2b3b5;
+                
             }
             .dws-menu > ul  li:last-child {
                 border-right: 1px solid #babbbb;
             }
             .dws-menu li a:hover {
-                /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ffffff+0,e5e5e5+100;White+3D */
-                background: rgb(255,255,255); /* Old browsers */
-                background: -moz-linear-gradient(top,  rgba(255,255,255,1) 0%, rgba(229,229,229,1) 100%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* Chrome10-25,Safari5.1-6 */
-                background: linear-gradient(to bottom,  rgba(255,255,255,1) 0%,rgba(229,229,229,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#e5e5e5',GradientType=0 ); /* IE6-9 */
-  
                 color: #2e2c2c;
+                background: rgb(216, 142, 5);
+                // border: 1px solid rgb(216, 142, 5);
+                // border-left: 6px solid rgb(216, 142, 5);
+                // color: crimson;
                 // box-shadow: 1px 5px 10px -1px black;
                 transition: all 0.3s ease;
+                // transition: 0.4s linear;
+                
             }
-  
+            .dws-menu ul li ul li a:hover {
+                border: 2px solid rgb(216, 142, 5);
+                border-left: 6px solid rgb(216, 142, 5);
+                background: #fff;
+                color: #2e2c2c;
+            }
+
             /////////
             .dws-menu  li ul {
                 position: absolute;
                 min-width: 250px;
-                display: none;
-          
+                display: none;   
             }
             .dws-menu li > ul li {
                 border: 1px solid #b8b8b8;
             }
             .dws-menu li > ul li a {
                 text-transform: none;
-  
-                /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
-                background: rgb(181,189,200); /* Old browsers */
-                background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
-                background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
-                background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-                filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-         
-         
+                background: #444; /////////////////2 уровень фон
+                text-transform: uppercase;
+                font-size: 12px;
+                padding-left: 5px;
+                padding-right: 2px;    
             }
             .dws-menu li > ul li ul {
                 position: absolute;
@@ -118,6 +108,17 @@ body {
             }
             .dws-menu li:hover > ul {
                 display: block;
+            }
+            .dws-menu li > ul li ul  {
+                
+            }
+            .dws-menu li > ul li ul li a {
+                background: rgb(131, 131, 131);//////////////////////////////////////// 3 уровень вон /////////////
+                border-left: 7px solid crimson;
+                border-bottom: 2px solid crimson;
+                border-top: 2px solid crimson;
+                border-right: 2px solid crimson;
+                
             }
         } 
     }
