--- a/src/styles/main-media-headerone.less
+++ b/src/styles/main-media-headerone.less
@@ -44,6 +44,7 @@
             background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */         
             // background: #bb4141;
+            background: #444;
             position: relative;
             text-align: center;
             height: 40px;//////////////////
@@ -52,7 +53,7 @@
             color: #FFFFFF;
             font-size: 14px;
             font-family: 'K2D', sans-serif;
-            font-weight: 400;
+            font-weight: 500;
             text-align: center;////////////////
             z-index: 99999;
             .check-menu-label {
@@ -64,11 +65,12 @@
               height: 100%;
               cursor: pointer;
               z-index: 2;
-              line-height: 35px;
+              line-height: 38px;
               margin-left: 10px; 
             }
             .check-menu-label:hover {
-              color: rgb(255, 176, 5); ////  
+              // color: rgb(255, 176, 5); ////  
+              color: rgb(216, 142, 5);
             } 
             .burger_line {
               display: block;
@@ -81,17 +83,18 @@
               left: 12px;
             }
             .check-menu-label:hover ~ div {
-              background: rgb(255, 176, 5); //// 
+              // background: rgb(255, 176, 5);
+              background: rgb(216, 142, 5); //// 
             } 
             .second, .third {////////////////////
-              top: 16px;//////////////////////////////
+              top: 18px;//////////////////////////////
               left: 12px;////////////////////////////////
             }/////////////////////////////
             .fourth {///////////////////////////////
-              top: 25px;//////////////////////////////
+              top: 27px;//////////////////////////////
             }/////////////////////////////////
             .first {////////////////////////////////
-              top: 8px;///////////////////////////////
+              top: 10px;///////////////////////////////
             }///////////////////////////////////////////////
             .main-menu {
               display: block;
@@ -127,12 +130,14 @@
             #check-menu:checked ~ .second {
               transform: rotate(225deg);
               transition: 1s;
-              background: rgb(7, 253, 220);
+              // background: rgb(7, 253, 220);
+              background: rgb(216, 142, 5);
             }
             #check-menu:checked ~ .third {
               transform: rotate(-225deg);
               transition: 1s;
-              background: rgb(7, 253, 220);
+              // background: rgb(7, 253, 220);
+              background: rgb(216, 142, 5);
             }  
             #check-menu:checked ~ .fourth {
               display: none;
@@ -161,7 +166,7 @@
             background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
             background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
             filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */         
-            // background: #f50d0d; 
+            background: #444; 
             position: relative;
             // color: white;
             text-align: center;
