--- a/src/styles/main-media-headerthree.less
+++ b/src/styles/main-media-headerthree.less
@@ -10,23 +10,28 @@
           }
           .nav-menu ul li {
             float: left;
+            
            
           }
           .nav-menu ul li a {
             text-decoration: none;
             color: white;
+            
           }
           .nav-menu ul li a:hover {
             color: #000000; /// работает
+            // background: rgb(216, 142, 5);
           }
           .nav-menu ul li ul {
             width: 100%;
             width: 1160px; ///////////////////////// длинна блока///////
             min-height: 40px;/////////////////////высота блока////////
             position: absolute;
-            background: rgb(125, 175, 209); ////////////////////////////////фон
+            // background: rgb(125, 175, 209); ////////////////////////////////фон
             overflow: hidden;
             transition: 0.3s;
+            padding-top: 15px;
+            padding-bottom: 15px;
           }
   
   
@@ -65,23 +70,31 @@
           }
           .nav-menu ul li ul li a{
             width: 245px;
-            height: 26px;
-            padding: 4px 5px 4px 10px;
+            height: 28px;
+            padding: 4px 5px 5px 10px;
             // padding: 5px 25px 5px 25px;
             
-            border: 1px solid rgb(253, 58, 58);
-            border-left: 6px solid red;
+            border: 2px solid rgb(255, 166, 0);
+            border-left: 6px solid rgb(255, 166, 0);
+            // border: 2px solid rgb(214, 214, 214);
+            // border-left: 6px solid rgb(214, 214, 214);
+            // border: 2px solid crimson;
+            // border-left: 6px solid crimson;
             text-transform: uppercase;
             webkit-transform: skewX(-15deg); 
               -moz-transform: skewX(-15deg); 
               -ms-transform: skewX(-15deg); 
               -o-transform: skewX(-15deg); 
             transform: skewX(-15deg); 
-            box-shadow: 5px 5px #000000;
+            box-shadow: 5px 5px rgb(133, 133, 133);
             font-size: 13px;
             font-family: 'K2D', sans-serif;
             font-weight: 500;
-            border-radius: 2px;  
+            border-radius: 2px;
+            background: #333; 
+           
+            
+            
           }
           .nav-menu ul li  ul li ul li {
             display: none;
@@ -472,14 +485,12 @@
           display: none;
         }
         .dws-menu label.toggleMenu {
-          // background: #0b65b9;
-          /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#b5bdc8+1,b5bdc8+3,30363a+60,30363a+98,30363a+98,30363a+98 */
-          background: rgb(181,189,200); /* Old browsers */
-          background: -moz-linear-gradient(top,  rgba(181,189,200,1) 1%, rgba(181,189,200,1) 3%, rgba(48,54,58,1) 60%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%, rgba(48,54,58,1) 98%); /* FF3.6-15 */
-          background: -webkit-linear-gradient(top,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* Chrome10-25,Safari5.1-6 */
-          background: linear-gradient(to bottom,  rgba(181,189,200,1) 1%,rgba(181,189,200,1) 3%,rgba(48,54,58,1) 60%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%,rgba(48,54,58,1) 98%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-          filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b5bdc8', endColorstr='#30363a',GradientType=0 ); /* IE6-9 */
-  
+         
+          
+
+          background: #444;
+
+
           display: none;
           padding: 10px 40px;
           text-transform: uppercase;
@@ -508,11 +519,18 @@
           .dws-menu {
             overflow: hidden;  
           }
+          .dws-menu .toggleMenu:hover {
+            color: rgb(216, 142, 5);
+          }
           .dws-menu ul {
             // display: none;
             display: block;
             max-height: 0;
             transition: max-height 0.3s;
+          }
+          .nav-menu ul li a {
+            border-bottom: 2px solid #fff;
+            // border-left: 7px solid #ffa920;
           }
           .dws-menu li>ul li ul{
             position: absolute;
@@ -523,13 +541,9 @@
             display: block; 
           }
           .dws-menu input.toggleMenu:checked + label.toggleMenu {
-            // background: rgb(63, 22, 22);
-            background: #eeeeee; /* Old browsers */
-            background: -moz-linear-gradient(top,  #eeeeee 0%, #cccccc 100%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
             color: black; 
+            background: rgb(200, 200, 200);////////////////////////////
+            border-bottom: 2px solid #fff; 
           }
           .dws-menu input.toggleMenu:checked ~ ul {
             display: block;
@@ -541,7 +555,6 @@
             display: block;
             position: relative;
             max-height: 30000px;
-            
             transition: max-height 2s ease-in;
           }
           .dws-menu label.toggleSubmenu {
@@ -551,18 +564,23 @@
             width: 100%;
             height: 100%;
             cursor: pointer;
-            display: block;
+            display: block; 
           }
           .dws-menu ul li input.toggleSubmenu:checked ~ a {
-            /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#eeeeee+0,cccccc+100;Gren+3D */
-            background: #eeeeee; /* Old browsers */
-            background: -moz-linear-gradient(top,  #eeeeee 0%, #cccccc 100%); /* FF3.6-15 */
-            background: -webkit-linear-gradient(top,  #eeeeee 0%,#cccccc 100%); /* Chrome10-25,Safari5.1-6 */
-            background: linear-gradient(to bottom,  #eeeeee 0%,#cccccc 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-            filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#eeeeee', endColorstr='#cccccc',GradientType=0 ); /* IE6-9 */
-            color: black;
+            color: black; 
+            background: rgb(200, 200, 200);
+            // border-left: 10px solid #ffa920;///////////////////////////////// 
           }
-          .dws-menu label.toggleSubmenu .fa:before {
+          .dws-menu ul li ul li input.toggleSubmenu:checked ~ a  {
+            background: crimson;
+            font-size: 14px;
+            font-weight: 500;
+            color: #fff;
+            text-align: center;
+            line-height: 18px;
+
+          }
+          .dws-menu label.toggleSubmenu .fa::before {
             // content: "\f078";
             content: "\f07b";
             color: #ffa920;
@@ -571,13 +589,14 @@
           .dws-menu label.toggleSubmenu .fa {
             position: absolute;
             top: 7px;
-            right: 30px;
+            right: 7px;
           }
            .dws-menu input.toggleSubmenu:checked ~ label.toggleSubmenu .fa::before {
             // content: "\f077";
             content: "\f07c";
             color: #0faa0f;
             font-size: 25px;
+            
           } 
         }  
       }
