--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -1,4 +1,76 @@
 @import url('https://fonts.googleapis.com/css2?family=K2D:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
+// font-family: 'K2D Bold', sans-serif;//
+//
+// Thin 100 / Thin 100 italic 
+// Extra-light 200 / Extra-light 200 italic 
+// Light 300 / Light 300 italic 
+// Regular 400 / Regular 400 italic
+// Medium 500 / Medium 500 italic
+// Semi-bold 600 / Semi-bold 600 italic
+// Bold 700 / Bold 700 italic
+// Extra-bold 800 / Extra-bold 800 italic
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+// font-family: 'Roboto', sans-serif;
+//
+// Thin 100 / Thin 100 italic 
+// Light 300 / Light 300 italic 
+// Regular 400 / Regular 400 italic
+// Medium 500 / Medium 500 italic
+// Bold 700 / Bold 700 italic
+// Black 900 // Black 900 italic
+
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+// font-family: 'Montserrat', sans-serif;
+//
+// Thin 100 / Thin 100 italic 
+// Extra-light 200 / Extra-light 200 italic 
+// Light 300 / Light 300 italic 
+// Regular 400 / Regular 400 italic
+// Medium 500 / Medium 500 italic
+// Semi-bold 600 / Semi-bold 600 italic
+// Bold 700 / Bold 700 italic
+// Extra-bold 800 / Extra-bold 800 italic
+// Black 900 // Black 900 italic
+
+
+// * {
+//   color: #ece493;////133026
+//   color: #84a1be;
+//   color: #5c7893;
+//   color: #535962;
+// }
+
+
+// * {
+//   color: #2b4450;/////39317
+//   color: #497285;
+//   color: #dfebed;
+//   color: #f78536;
+// }
+
+// * {
+//   color: #2f3c4f;//////39601
+//   color: #506e86;
+//   color :#fcb040;
+//   color: #de703b;
+// }
+
+// * {
+//     color: #233142;//////123973
+//     color: #455d7a;
+//     color :#f95959;
+//     color: #facf5a;
+//   }
+
+// * {
+//   color: #497285;////////////////////////////// ++++++
+//   color: #ffd000;
+// }
+
+
+
+
 
 * {
   box-sizing: border-box;
@@ -6,10 +78,12 @@
   margin: 0;
 }
 
+
 @import url('main-headerone.less');
 @import url('main-headertwo.less');
 @import url('main-header-breadcrumbs.less');
-@import url('main-headerthree.less');
+// @import url('main-headerthree.less');
+@import url('main-menu-block.less');
 
 @import url('main-content-block.less');
 
@@ -26,6 +100,7 @@
 // @import url('main-media.less');
 @import url('main-media-headerone.less');
 @import url('main-media-headertwo.less');
-@import url('main-media-headerthree.less');
+// @import url('main-media-headerthree.less');
+@import url('main-media-menu-block.less');
 
 
