--- a/src/styles/main-footer.less
+++ b/src/styles/main-footer.less
@@ -15,12 +15,18 @@ body {
         // flex-direction: column;
         // min-height: 230px;
         width: 100%;
-        max-width: 1260px;
+        width: 100vw;
+        // max-width: 1260px;
         // justify-content: space-around;
 
         background: #222;
-        font-family: 'K2D', sans-serif;
-        color: #aaa;
+        background: #45698b;
+        
+        // background-image: url("../images/200.jpg");
+        // font-family: 'K2D', sans-serif;
+        // color: #aaa;
+        color: #f5f6fa;
+        
         z-index: 11111;
         .container {
             width: 100%;
@@ -29,33 +35,58 @@ body {
             .box {
                 flex: 1;
                 margin: 5px 15px;
+                padding: 10px 20px;
                 min-width: 300px;
                 
                 
             }
+            .box:hover h4 {
+                color: #ffd000;
+                transition: linear 1.0s;
+            }
             .box h4 {
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                font-size: 16px;
+                color: #f5f6fa;
+                
                 text-transform: uppercase;
                 letter-spacing: 3px;
-                border-bottom: 2px solid #555;
+                // border-bottom: 2px solid #555;
+                // border-bottom: 2px solid #487eb0;
+                border-bottom: 2px solid #4f97db;
+               
                 position: relative;
-                margin-bottom: 15px;
+                margin-bottom: 16px;
+                transition: linear 1.0s;
             }
             .box h4::before {
                 content: "";
-                width: 130px;
+                // width: 130px;
+                width: 50%;
                 height: 100%;
-                border-bottom: 2px solid crimson;
+                // border-bottom: 2px solid crimson;
+                border-bottom: 2px solid #ffd000;
                 position: absolute;
+                // margin-left: 25%;
 
             }
             .box p {
-                font-size: 13px;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                font-size: 16px;
                 padding-bottom: 10px;
             }
             .box a {
-                color: #aaa;
+                // color: #aaa;
+                color: #f5f6fa;
+                // color: #487eb0;
                 text-decoration: none;
                 display: inline-block;
+
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                font-size: 16px;
             } 
             .box a i {
                 background: #333;
@@ -67,23 +98,34 @@ body {
                
                 transition: 0.5s linear;
                 border-radius: 5px;
-                border: 1px solid #aaa;
+                // border: 1px solid #aaa;
+                border: 1px solid #5aaaf5;
+
+                color: #5aaaf5;
             } 
             .box a:hover {
-                color: crimson;
+                // color: crimson;
+                color: #ffd000;
+               
                 // border-radius: 50%;
                 // border: 2px solid crimson;   
             } 
             .box a:hover i {
-                border: 1px solid rgb(143, 28, 51);  
+                // border: 1px solid rgb(143, 28, 51); 
+                border: 1px solid #ffd000; 
+                // color: crimson;
+                color: #ffd000; 
+               
             }
             .box .social {
                 margin-top: 5px;
             }
             .box .address a {
                 display: block;
-                margin-bottom: 15px;
-                font-size: 14px;
+                margin-bottom: 16px;
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                font-size: 15px;
             }
             .box form input, .box form textarea {
                 width: 100%;
@@ -94,41 +136,68 @@ body {
                 // padding: 5px;
                 margin-bottom: 10px;
             } 
-            .box form label span {
-                color: crimson;
+            .box form label {
+                font-family: 'Roboto', sans-serif;
+                font-weight: 400;
+                font-size: 16px;
+                text-transform: uppercase;
             }
+            .box form label span {
+                // color: crimson;
+                color: #5aaaf5;   
+            }
+            
             .box form button {
                 width: 50%;
                 height: 25px;
                 border: none;
                 outline: none;
-                background: rgb(255, 255, 255);
+                // background: rgb(255, 255, 255);
+                background: #333;
                 text-transform: uppercase;
-                font-size: 14px;
+                font-family: 'Roboto', sans-serif;
                 font-weight: 600;
-                border: 1px solid crimson;
+                font-size: 16px;
+                // color: #487eb0;
+                color:  #5aaaf5;
+               
+                letter-spacing: 4px;
+                border: 1px solid #5aaaf5;
                 border-radius: 3px;
+                transition: 0.5s linear;
                 cursor: pointer;
-                color: crimson;
+                
             }
             .box form button:hover {
-                background: crimson;
-                border: 1px solid rgb(255, 255, 255);
-                color: rgb(255, 255, 255)
-                ;
+                // background: crimson;
+                // border: 1px solid crimson;
+                border: 1px solid #ffd000;
+                // color: crimson;
+                color: #ffd000;
+                
+                
                 border-radius: 3px;
             }        
         }
         .author {
             width: 100%;
             background: black;
+            background: #385570;
+            background: #333;
             text-align: center;
             padding: 5px;
-            font-size: 14px;
+            font-family: 'Roboto', sans-serif;
+            font-weight: 400;
+            font-size: 16px;
             text-transform: uppercase;
             overflow: hidden;
             p {
-                span {
+                .author_text_one {
+                    color: #5aaaf5;
+                   
+                   
+                }
+                .author_text_two {
                     color: crimson;
                 }
             }
